frei0r-sys/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const FREI0R_MAJOR_VERSION: u32 = 1;
pub const FREI0R_MINOR_VERSION: u32 = 2;
pub const F0R_PLUGIN_TYPE_FILTER: u32 = 0;
pub const F0R_PLUGIN_TYPE_SOURCE: u32 = 1;
pub const F0R_PLUGIN_TYPE_MIXER2: u32 = 2;
pub const F0R_PLUGIN_TYPE_MIXER3: u32 = 3;
pub const F0R_COLOR_MODEL_BGRA8888: u32 = 0;
pub const F0R_COLOR_MODEL_RGBA8888: u32 = 1;
pub const F0R_COLOR_MODEL_PACKED32: u32 = 2;
pub const F0R_PARAM_BOOL: u32 = 0;
pub const F0R_PARAM_DOUBLE: u32 = 1;
pub const F0R_PARAM_COLOR: u32 = 2;
pub const F0R_PARAM_POSITION: u32 = 3;
pub const F0R_PARAM_STRING: u32 = 4;
unsafe extern "C" {
    #[doc = " f0r_init() is called once when the plugin is loaded by the application.\n \\see f0r_deinit"]
    pub fn f0r_init() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " f0r_deinit is called once when the plugin is unloaded by the application.\n \\see f0r_init"]
    pub fn f0r_deinit();
}
#[doc = " The f0r_plugin_info_t structure is filled in by the plugin\n to tell the application about its name, type, number of parameters,\n and version.\n\n An application should ignore (i.e. not use) frei0r effects that\n have unknown values in the plugin_type or color_model field.\n It should also ignore effects with a too high frei0r_version.\n\n This is necessary to be able to extend the frei0r spec (e.g.\n by adding new color models or plugin types) in a way that does not\n result in crashes when loading effects that make use of these\n extensions into an older application.\n\n All strings are unicode, 0-terminated, and the encoding is utf-8."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct f0r_plugin_info {
    #[doc = "< The (short) name of the plugin"]
    pub name: *const ::std::os::raw::c_char,
    #[doc = "< The plugin author"]
    pub author: *const ::std::os::raw::c_char,
    #[doc = " The plugin type\n \\see PLUGIN_TYPE"]
    pub plugin_type: ::std::os::raw::c_int,
    #[doc = "< The color model used"]
    pub color_model: ::std::os::raw::c_int,
    #[doc = "< The frei0r major version this plugin is built for"]
    pub frei0r_version: ::std::os::raw::c_int,
    #[doc = "< The major version of the plugin"]
    pub major_version: ::std::os::raw::c_int,
    #[doc = "< The minor version of the plugin"]
    pub minor_version: ::std::os::raw::c_int,
    #[doc = "< The number of parameters of the plugin"]
    pub num_params: ::std::os::raw::c_int,
    #[doc = "< An optional explanation string"]
    pub explanation: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of f0r_plugin_info"][::std::mem::size_of::<f0r_plugin_info>() - 48usize];
    ["Alignment of f0r_plugin_info"][::std::mem::align_of::<f0r_plugin_info>() - 8usize];
    ["Offset of field: f0r_plugin_info::name"]
        [::std::mem::offset_of!(f0r_plugin_info, name) - 0usize];
    ["Offset of field: f0r_plugin_info::author"]
        [::std::mem::offset_of!(f0r_plugin_info, author) - 8usize];
    ["Offset of field: f0r_plugin_info::plugin_type"]
        [::std::mem::offset_of!(f0r_plugin_info, plugin_type) - 16usize];
    ["Offset of field: f0r_plugin_info::color_model"]
        [::std::mem::offset_of!(f0r_plugin_info, color_model) - 20usize];
    ["Offset of field: f0r_plugin_info::frei0r_version"]
        [::std::mem::offset_of!(f0r_plugin_info, frei0r_version) - 24usize];
    ["Offset of field: f0r_plugin_info::major_version"]
        [::std::mem::offset_of!(f0r_plugin_info, major_version) - 28usize];
    ["Offset of field: f0r_plugin_info::minor_version"]
        [::std::mem::offset_of!(f0r_plugin_info, minor_version) - 32usize];
    ["Offset of field: f0r_plugin_info::num_params"]
        [::std::mem::offset_of!(f0r_plugin_info, num_params) - 36usize];
    ["Offset of field: f0r_plugin_info::explanation"]
        [::std::mem::offset_of!(f0r_plugin_info, explanation) - 40usize];
};
#[doc = " The f0r_plugin_info_t structure is filled in by the plugin\n to tell the application about its name, type, number of parameters,\n and version.\n\n An application should ignore (i.e. not use) frei0r effects that\n have unknown values in the plugin_type or color_model field.\n It should also ignore effects with a too high frei0r_version.\n\n This is necessary to be able to extend the frei0r spec (e.g.\n by adding new color models or plugin types) in a way that does not\n result in crashes when loading effects that make use of these\n extensions into an older application.\n\n All strings are unicode, 0-terminated, and the encoding is utf-8."]
pub type f0r_plugin_info_t = f0r_plugin_info;
unsafe extern "C" {
    #[doc = " Is called once after init. The plugin has to fill in the values in info.\n\n \\param info Pointer to an info struct allocated by the application."]
    pub fn f0r_get_plugin_info(info: *mut f0r_plugin_info_t);
}
#[doc = " The boolean type. The allowed range of values is [0, 1].\n [0, 0.5[ is mapped to false and [0.5, 1] is mapped to true."]
pub type f0r_param_bool = f64;
#[doc = " The double type. The allowed range of values is [0, 1]."]
pub type f0r_param_double = f64;
#[doc = " The color type. All three color components are in the range [0, 1]."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct f0r_param_color {
    #[doc = "< red color component"]
    pub r: f32,
    #[doc = "< green color component"]
    pub g: f32,
    #[doc = "< blue color component"]
    pub b: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of f0r_param_color"][::std::mem::size_of::<f0r_param_color>() - 12usize];
    ["Alignment of f0r_param_color"][::std::mem::align_of::<f0r_param_color>() - 4usize];
    ["Offset of field: f0r_param_color::r"][::std::mem::offset_of!(f0r_param_color, r) - 0usize];
    ["Offset of field: f0r_param_color::g"][::std::mem::offset_of!(f0r_param_color, g) - 4usize];
    ["Offset of field: f0r_param_color::b"][::std::mem::offset_of!(f0r_param_color, b) - 8usize];
};
#[doc = " The color type. All three color components are in the range [0, 1]."]
pub type f0r_param_color_t = f0r_param_color;
#[doc = " The position type. Both position coordinates are in the range [0, 1]."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct f0r_param_position {
    #[doc = "< x coordinate"]
    pub x: f64,
    #[doc = "< y coordinate"]
    pub y: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of f0r_param_position"][::std::mem::size_of::<f0r_param_position>() - 16usize];
    ["Alignment of f0r_param_position"][::std::mem::align_of::<f0r_param_position>() - 8usize];
    ["Offset of field: f0r_param_position::x"]
        [::std::mem::offset_of!(f0r_param_position, x) - 0usize];
    ["Offset of field: f0r_param_position::y"]
        [::std::mem::offset_of!(f0r_param_position, y) - 8usize];
};
#[doc = " The position type. Both position coordinates are in the range [0, 1]."]
pub type f0r_param_position_t = f0r_param_position;
#[doc = " The string type.\n Zero terminated array of 8-bit values in utf-8 encoding"]
pub type f0r_param_string = *mut ::std::os::raw::c_char;
#[doc = " Similar to f0r_plugin_info_t, this structure is filled by the plugin\n for every parameter.\n\n All strings are unicode, 0-terminated, and the encoding is utf-8."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct f0r_param_info {
    #[doc = "<The (short) name of the param"]
    pub name: *const ::std::os::raw::c_char,
    #[doc = "<The type (see the F0R_PARAM_* defines)"]
    pub type_: ::std::os::raw::c_int,
    #[doc = "<Optional explanation (can be 0)"]
    pub explanation: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of f0r_param_info"][::std::mem::size_of::<f0r_param_info>() - 24usize];
    ["Alignment of f0r_param_info"][::std::mem::align_of::<f0r_param_info>() - 8usize];
    ["Offset of field: f0r_param_info::name"]
        [::std::mem::offset_of!(f0r_param_info, name) - 0usize];
    ["Offset of field: f0r_param_info::type_"]
        [::std::mem::offset_of!(f0r_param_info, type_) - 8usize];
    ["Offset of field: f0r_param_info::explanation"]
        [::std::mem::offset_of!(f0r_param_info, explanation) - 16usize];
};
#[doc = " Similar to f0r_plugin_info_t, this structure is filled by the plugin\n for every parameter.\n\n All strings are unicode, 0-terminated, and the encoding is utf-8."]
pub type f0r_param_info_t = f0r_param_info;
unsafe extern "C" {
    #[doc = " f0r_get_param_info is called by the application to query the type of\n each parameter.\n\n \\param info is allocated by the application and filled by the plugin\n \\param param_index the index of the parameter to be queried (from 0 to\n   num_params-1)"]
    pub fn f0r_get_param_info(info: *mut f0r_param_info_t, param_index: ::std::os::raw::c_int);
}
#[doc = " Transparent instance pointer of the frei0r effect."]
pub type f0r_instance_t = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    #[doc = " Constructor for effect instances. The plugin returns a pointer to\n its internal instance structure.\n\n The resolution must be an integer multiple of 8,\n must be greater than 0 and be at most 2048 in both dimensions.\n The plugin must set default values for all parameters in this function.\n\n \\param width The x-resolution of the processed video frames\n \\param height The y-resolution of the processed video frames\n \\returns 0 on failure or a pointer != 0 on success\n\n \\see f0r_destruct"]
    pub fn f0r_construct(
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
    ) -> f0r_instance_t;
}
unsafe extern "C" {
    #[doc = " Destroys an effect instance.\n\n \\param instance The pointer to the plugins internal instance structure.\n\n \\see f0r_construct"]
    pub fn f0r_destruct(instance: f0r_instance_t);
}
#[doc = " Transparent parameter handle."]
pub type f0r_param_t = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    #[doc = " This function allows the application to set the parameter values of an\n effect instance. Validity of the parameter pointer is handled by the\n application thus the data must be copied by the effect.\n\n If the parameter type is of F0R_PARAM_STRING, then the caller should\n supply a pointer to f0r_param_string (char**). The plugin must copy\n copy the string and not assume it exists beyond the lifetime of the call.\n The reason a double pointer is requested when only a single is really\n needed is simply for API consistency.\n\n Furthermore, if an update event/signal is needed in a host\n application to notice when parameters have changed, this should be\n implemented inside its own update() call. The host application\n would presumably need to store the current value as well to see if\n it changes; to make this thread safe, it should store a copy of the\n current value in a struct which uses instance as a key.\n\n \\param instance the effect instance\n \\param param pointer to the parameter value\n \\param param_index index of the parameter\n\n \\see f0r_get_param_value"]
    pub fn f0r_set_param_value(
        instance: f0r_instance_t,
        param: f0r_param_t,
        param_index: ::std::os::raw::c_int,
    );
}
